--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "electron ."
   },
-  "repository": "",
+  "repository": "https://github.com/Lmadushan/electron-calculator",
   "keywords": [
     "Electron",
     "quick",
